--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "google-auth-library": "^9.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "~1.4.3-lts.1",
     "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
